--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "watch": "nodemon --ext *"
   },
@@ -25,6 +25,8 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "nodemon": "^2.0.15"
   }
 }
