--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "sass": "sass --watch public/css/sass:public/css/compiledCSS",
     "watch": "nodemon --ext *"
   },
   "author": "Danian Marengo",
