--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "gulp-sourcemaps": "^3.0.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.5",
     "node-fetch": "^3.2.2",
